samples/_failures_safe/1761156261_08642b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c75f114e.c: In function ‘print_entries_by_level’:
./samples/SAFE/__tmp_c75f114e.c:143:12: error: missing terminating " character
  143 |     printf("Entries
      |            ^~~~~~~~
./samples/SAFE/__tmp_c75f114e.c:143:5: error: expected expression at end of input
  143 |     printf("Entries
      |     ^~~~~~
./samples/SAFE/__tmp_c75f114e.c:143:5: error: expected declaration or statement at end of input
